[package]
name = "faces_network_common_types"
version = "0.1.0"
edition = "2024"

[features]

default = []
client-side = ["faces_quic_client"]
server-side = []

[dependencies]
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
faces_quic_client = { git = "https://github.com/Cm3lp8/faces-quic-client.git", optional = true}
faces_quic_server = { git =  "https://github.com/Cm3lp8/faces_http3_server.git" }
uuid = {version = "1.18.1", features = ["v4", "v7", "serde"]}
chrono = {version="0.4.42", features=["serde"]}
bincode = { version="2.0.1", features=["serde", "derive"]}


